[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/GameOver.gd" type="Script" id=1]
[ext_resource path="res://resource/emphasized_theme.tres" type="Theme" id=2]
[ext_resource path="res://resource/title_theme.tres" type="Theme" id=3]
[ext_resource path="res://resource/tech_theme.tres" type="Theme" id=4]
[ext_resource path="res://resource/button_theme.tres" type="Theme" id=5]
[ext_resource path="res://resource/quit_shortcut.tres" type="ShortCut" id=6]

[node name="GameOver" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="Header" type="Label" parent="."]
anchor_right = 1.0
margin_top = 26.0
margin_bottom = 91.0
grow_horizontal = 2
theme = ExtResource( 3 )
text = "Game Over"
align = 1

[node name="Score" type="Label" parent="."]
margin_left = 365.0
margin_top = 101.0
margin_right = 477.0
margin_bottom = 146.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "Score: ?"

[node name="Seed" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -19.0
margin_right = 45.0
theme = ExtResource( 4 )
text = "Seed: ?"

[node name="Mode" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -19.0
grow_horizontal = 0
theme = ExtResource( 4 )
text = "Mode: ?"

[node name="Buttons" type="MarginContainer" parent="."]
margin_left = 36.0
margin_top = 139.0
margin_right = 763.0
margin_bottom = 431.0

[node name="Arise" type="Button" parent="Buttons"]
margin_top = 128.0
margin_right = 87.0
margin_bottom = 164.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource( 5 )
action_mode = 0
text = "Arise"
flat = true
align = 0

[node name="GiveUp" type="Button" parent="Buttons"]
margin_left = 604.0
margin_top = 128.0
margin_right = 727.0
margin_bottom = 164.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource( 5 )
shortcut_in_tooltip = false
action_mode = 0
shortcut = ExtResource( 6 )
text = "Give Up"
flat = true
align = 2

[node name="Tainted" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -73.5
margin_right = 82.0
margin_bottom = -28.5
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.027451, 0.027451, 1 )
text = "Cheater"

[connection signal="draw" from="." to="." method="_on_GameOver_draw"]
[connection signal="gui_input" from="." to="." method="_on_GameOver_gui_input"]
[connection signal="mouse_entered" from="Buttons/Arise" to="." method="_on_Arise_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Arise" to="." method="_on_Arise_mouse_exited"]
[connection signal="pressed" from="Buttons/Arise" to="." method="_on_Arise_pressed"]
[connection signal="mouse_entered" from="Buttons/GiveUp" to="." method="_on_GiveUp_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/GiveUp" to="." method="_on_GiveUp_mouse_exited"]
[connection signal="pressed" from="Buttons/GiveUp" to="." method="_on_GiveUp_pressed"]
